--- a/css/responsive.css
+++ b/css/responsive.css
@@ -449,7 +449,7 @@ ul.link li {
 .mens_taital { display: none; }
 .mens_taital_2 { display: none; }
 .page_no { display: none;}
-.bg-light { background-color: #db5660!important;  }
+.bg-light { background-color: #0061a2 !important;  }
 .header_section { background-size: cover;}
 .header_section { background-size: cover; background-repeat: no-repeat;}
 .buy_text { width: 100%; }
